# lqr_controller

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: Figure8.cfg
include/lqr/: eigen.h  figure8.h  logger.h  lqr.h  waypoints.h
launch/: mocap_lqr.launch  sim_lqr.launch  sim_sil.launch
params/: mocap_lqr_params.yaml  rosflight_params.yaml  sim_lqr_params.yaml
scripts/: plot_mocap_results.py
src/: lqr.cpp  lqr_node.cpp
